Implemented till salary records feature
